// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details component when consumer gruops are NOT fetched Matches the snapshot 1`] = `
<div
  className="section"
>
  <div
    className="level"
  >
    <div
      className="level-item level-left"
    >
      <Breadcrumb
        links={
          Array [
            Object {
              "href": "/ui/clusters/local/consumer-groups",
              "label": "All Consumer Groups",
            },
          ]
        }
      >
        test
      </Breadcrumb>
    </div>
  </div>
  <PageLoader />
  <ConfirmationModal
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to delete this consumer group?
  </ConfirmationModal>
</div>
`;

exports[`Details component when consumer gruops are fetched Matches the snapshot 1`] = `
<div
  className="section"
>
  <div
    className="level"
  >
    <div
      className="level-item level-left"
    >
      <Breadcrumb
        links={
          Array [
            Object {
              "href": "/ui/clusters/local/consumer-groups",
              "label": "All Consumer Groups",
            },
          ]
        }
      >
        test
      </Breadcrumb>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="level"
    >
      <div
        className="level-item level-right buttons"
      >
        <button
          className="button is-danger"
          onClick={[Function]}
          type="button"
        >
          Delete consumer group
        </button>
      </div>
    </div>
    <table
      className="table is-striped is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            Consumer ID
          </th>
          <th>
            Host
          </th>
          <th>
            Topic
          </th>
          <th>
            Partition
          </th>
          <th>
            Messages behind
          </th>
          <th>
            Current offset
          </th>
          <th>
            End offset
          </th>
        </tr>
      </thead>
      <tbody>
        <ListItem
          clusterName="local"
          consumer={
            Object {
              "consumerId": "consumer-messages-consumer-1-122fbf98-643b-491d-8aec-c0641d2513d0",
              "currentOffset": 394,
              "endOffset": 394,
              "host": "/172.31.9.153",
              "messagesBehind": 0,
              "partition": 6,
              "topic": "messages",
            }
          }
          key="consumer-messages-consumer-1-122fbf98-643b-491d-8aec-c0641d2513d0"
        />
        <ListItem
          clusterName="local"
          consumer={
            Object {
              "consumerId": "consumer-messages-consumer-1-122fbf98-643b-491d-8aec-c0641d2513d1",
              "currentOffset": 384,
              "endOffset": 384,
              "host": "/172.31.9.153",
              "messagesBehind": 0,
              "partition": 7,
              "topic": "messages",
            }
          }
          key="consumer-messages-consumer-1-122fbf98-643b-491d-8aec-c0641d2513d1"
        />
      </tbody>
    </table>
  </div>
  <ConfirmationModal
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to delete this consumer group?
  </ConfirmationModal>
</div>
`;
